Hardcoded build to use django 1.10
Also tags docker image

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,11 @@ script:
 
 # Push image
   - >
-    if [ "$TRAVIS_BRANCH" == "master" ] && ["$TRAVIS_PULL_REQUEST" == "false" ]; then
-      docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-      docker push algoretum/django_rpi
+    if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" ;
+    TAG=$(grep "ENV DJANGO_VER" Dockerfile | awk '{print $3}') ;
+    docker tag algoretum/django_rpi algoretum/django_rpi:$TAG ;
+    docker push algoretum/django_rpi:$TAG ;
+    docker push algoretum/django_rpi  ;
     fi
 
