--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 # Build image
   - docker build -t  algoretum/django_rpi .
 # Test image
-  - docker run algoretum/django_rpi python3 --version
+#  - docker run algoretum/django_rpi python3 --version
 
 # Push image
   - >
