Added some new requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,12 @@ django==1.11
 djangorestframework
 django-filter
 coreapi
-beautifulsoup4
 lxml
 pymysql
 mysqlclient
+django-tagging
+markdown
+django-cors-headers
+django-crispy-forms
+django-guardian
 
